--- a/assets/src/app/vote/index.tpl.html
+++ b/assets/src/app/vote/index.tpl.html
@@ -16,6 +16,10 @@
     	<br>
 		<!--UI/UX - break out into YES / NO - show representative votes -->
 		<uib-tabset>
+			<uib-tab heading="Activity" active="active">
+		    </uib-tab>
+			<uib-tab heading="Discussion">
+		    </uib-tab>
 			<uib-tab heading="{{vote.plusCount}}  Yes" active="active">
 			    <div class="col-lg-4 col-sm-6" ng-repeat="vote in yesVotes">
 			      <div style="margin:10px; box-shadow: 2px 2px 10px #999;">
