--- a/assets/src/app/footer/index.tpl.html
+++ b/assets/src/app/footer/index.tpl.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		{{date | date:'yyyy'}} <a href="/">voetr</a>
 		<a href="/about">about</a>
-		<a href="/about">discover</a>
+		<a href="/search">discover</a>
 		<a href="/bills">bills</a>
 		<a href="/committees">committees</a>
 		<a href="/votes">votes</a>
