--- a/assets/src/app/member/index.tpl.html
+++ b/assets/src/app/member/index.tpl.html
@@ -143,28 +143,42 @@
 			</div>
 		</uib-tab>
 		<uib-tab heading="{{constituents.length}} Constituents">
-		 	<div class='md-padding' layout="row" layout-align="center" layout-wrap>
-				<md-card flex="20" ng-repeat="constituent in constituents">
-					<a href="/member/{{constituent.constituent.username}}">
-		              <img ng-src="{{constituent.constituent.avatarUrl}}" class="md-card-image" alt="{{constituent.constituent.username}}">
-		            </a>
-					<md-card-title-text>
-						<a href="/member/{{constituent.constituent.username}}"><h4>{{constituent.constituent.username}}</h4></a>
-					</md-card-title-text>
-				</md-card>
-			</div>
+			<div class="col-lg-4 col-sm-6" ng-repeat="constituent in constituents">
+	          <div style="margin:10px; box-shadow: 2px 2px 10px #999;overflow:hidden">
+	            <div class="image" style="background-image: url('{{constituent.constituent.coverUrl}}')">
+	              <img alt="" style="position:absolute;left:0;right0;margin:0 auto;margin-top:4em" src="{{constituent.constituent.avatarUrl}}" err-src="/images/avatar.png">
+	            </div>
+	            <div class="info">
+	              <h2 class="name"><a href="member/{{constituent.constituent.username}}">{{constituent.constituent.username}}</a></h2>
+	              <h3 class="position"><a href="member/{{constituent.constituent.username}}">{{constituent.constituent.title}}</a></h3>
+	              <p>{{constituent.constituent.state}}</p>
+	            </div>
+	            <div class="social">
+	              <a ng-show="constituent.constituent.socialAccounts.facebook.profileUrl" href="{{constituent.constituent.socialAccounts.facebook.profileUrl}}"  target="_blank"><i class="fa fa-facebook"></i></a>
+	              <a ng-show="constituent.constituent.socialAccounts.twitter.profileUrl" href="{{constituent.constituent.socialAccounts.twitter.profileUrl}}"  target="_blank"><i class="fa fa-twitter"></i></a>
+	              <a ng-show="constituent.constituent.socialAccounts.google.profileUrl" href="{{constituent.constituent.socialAccounts.google.profileUrl}}"  target="_blank"><i class="fa fa-google"></i></a>
+	            </div>
+	          </div>
+	        </div>
 		</uib-tab>
 		<uib-tab heading="{{representatives.length}} Representatives">
- 			<div class='md-padding' layout="row" layout-align="center" layout-wrap>
-				<md-card flex="20" ng-repeat="representative in representatives">
-				    <a href="/member/{{representative.representative.username}}">
-		              <img ng-src="{{representative.representative.avatarUrl}}" class="md-card-image" alt="{{representative.representative.username}}">
-		            </a>
-					<md-card-title-text>
-						<a href="/member/{{representative.representative.username}}"><h4>{{representative.representative.username}}</h4></a>
-					</md-card-title-text>
-				</md-card>
-			</div>
+		    <div class="col-lg-4 col-sm-6" ng-repeat="representative in representatives">
+	          <div style="margin:10px; box-shadow: 2px 2px 10px #999;overflow:hidden">
+	            <div class="image" style="background-image: url('{{representative.representative.coverUrl}}')">
+	              <img alt="" style="position:absolute;left:0;right0;margin:0 auto;margin-top:4em" src="{{representative.representative.avatarUrl}}" err-src="/images/avatar.png">
+	            </div>
+	            <div class="info">
+	              <h2 class="name"><a href="member/{{representative.representative.username}}">{{representative.representative.username}}</a></h2>
+	              <h3 class="position"><a href="member/{{representative.representative.username}}">{{representative.representative.title}}</a></h3>
+	              <p>{{representative.representative.state}}</p>
+	            </div>
+	            <div class="social">
+	              <a ng-show="representative.representative.socialAccounts.facebook.profileUrl" href="{{representative.representative.socialAccounts.facebook.profileUrl}}"  target="_blank"><i class="fa fa-facebook"></i></a>
+	              <a ng-show="representative.representative.socialAccounts.twitter.profileUrl" href="{{representative.representative.socialAccounts.twitter.profileUrl}}"  target="_blank"><i class="fa fa-twitter"></i></a>
+	              <a ng-show="representative.representative.socialAccounts.google.profileUrl" href="{{representative.representative.socialAccounts.google.profileUrl}}"  target="_blank"><i class="fa fa-google"></i></a>
+	            </div>
+	          </div>
+	        </div>
 		</uib-tab>
 		<!--<uib-tab heading="Followers">
 		</uib-tab>
