--- a/assets/src/app/search/index.tpl.html
+++ b/assets/src/app/search/index.tpl.html
@@ -79,19 +79,43 @@
 			</div>
 		</div>
 		<div class="container">
+ 			<uib-tabset>
+ 			    <uib-tab heading="Bills" active="active">
+    			</uib-tab>
+				<uib-tab heading="Committees">
+    			</uib-tab>
+				<uib-tab heading="Discussion">
+    			</uib-tab>
+				<uib-tab heading="Members">
+    			</uib-tab>
+    			<uib-tab heading="Votes">
+    			</uib-tab>
+			</uib-tabset>
+		</div>
+		<!--filters - tags etc-->
+		<div class="container">
+			<div ng-show="searchResult.username" ng-repeat="searchResult in searchResults">
+				<div class="col-lg-4 col-sm-6">
+				  <div style="margin:10px; box-shadow: 2px 2px 10px #999;overflow:hidden">
+				    <div class="image" style="background-image: url('{{searchResult.coverUrl}}')">
+				      <img alt="" style="position:absolute;left:0;right0;margin:0 auto;margin-top:4em" src="{{searchResult.avatarUrl}}" err-src="/images/avatar.png">
+				    </div>
+				    <div class="info">
+				      <h2 class="name"><a href="member/{{searchResult.username}}">{{searchResult.username}}</a></h2>
+				      <h3 class="position"><a href="member/{{searchResult.username}}">{{searchResult.title}}</a></h3>
+				      <p>{{searchResult.state}}</p>
+				    </div>
+				    <div class="social">
+				      <a ng-show="searchResult.socialAccounts.facebook.profileUrl" href="{{searchResult.socialAccounts.facebook.profileUrl}}"  target="_blank"><i class="fa fa-facebook"></i></a>
+				      <a ng-show="searchResult.socialAccounts.twitter.profileUrl" href="{{searchResult.socialAccounts.twitter.profileUrl}}"  target="_blank"><i class="fa fa-twitter"></i></a>
+				      <a ng-show="searchResult.socialAccounts.google.profileUrl" href="{{searchResult.socialAccounts.google.profileUrl}}"  target="_blank"><i class="fa fa-google"></i></a>
+				    </div>
+				  </div>
+				</div>
+			</div>
 			<md-card ng-repeat="searchResult in searchResults">
-				<!--<img ng-show="searchResult.username" src="{{searchResult.avatarUrl}}" class="md-card-image" alt="{{searchResult.username}}" style="">-->
 				<md-card-title>
 					<md-card-title-text>
-						<div ng-show="searchResult.username">
-
-
-							<a href="/member/{{searchResult.username}}">{{searchResult.username}}</a>
-
-							
-
-
-						</div>
 						<h4 ng-show="searchResult.billContent"><a href="/bill/{{searchResult.id}}/{{searchResult.title}}">{{searchResult.title}}</a></h4>
 						<h4 ng-show="!searchResult.billContent"><a href="/committee/{{searchResult.urlTitle}}">{{searchResult.title}}</a></h4>
 					</md-card-title-text>
@@ -99,4 +123,5 @@
 			</md-card>
 		</div>
 	</div>
+	<div ng-include="'footer/index.tpl.html'"></div>
 </div>
