--- a/assets/src/app/about/index.tpl.html
+++ b/assets/src/app/about/index.tpl.html
@@ -8,21 +8,20 @@
 	<div id="section1">
 		<div class="container">
 			<h2>the voice of the internet</h2>
-			<p>build empowerment, change consensus</p>
 			<p>directly impact the political landscape</p>
 			<img style="height:64px" src="http://www.freeiconspng.com/uploads/vote-icon-19.png"/>
 		</div>
 	</div>
 	<div id="section2">
 		<div class="container">
-			<h4>direct your impact though real time input on policy</h4>
+			<h4>direct your impact though input on policy</h4>
 			<p>decision making influence in the power of your hands</p>
 		</div>
 	</div>
 	<div id="section3">
 		<div class="container">
 			<h4>elect representatives and serve your constituents</h4>
-	    	<p>with continual open ballot elections, select others to represent you at any time</p>
+	    	<p>with continual elections, select others to represent you at any time</p>
 	    </div>
 	</div>
 	<div id="section4">
