--- a/assets/src/app/committee/discussion.tpl.html
+++ b/assets/src/app/committee/discussion.tpl.html
@@ -18,12 +18,17 @@
   <h2>discussion</h2>
   <md-divider ></md-divider>
   <div class="committeeDiscussionContainer">
-    <div class="committeeDiscussion" ng-repeat="discussion in posts">
-      <a href="/discussion/{{discussion}}">
-        <h4>{{discussion}}</h4>
-        <md-divider ></md-divider>
-      </a>
-    </div>
+    <md-card ng-repeat="post in posts">
+      <md-card-title>
+        <md-card-title-text>
+        <a href="member/{{post.user.username}}">
+          <img style="max-width:64px" ng-src="{{post.user.avatarUrl}}" class="md-card-image" alt="{{post.user.username}}">
+          <p>{{post.user.username}}</p>
+        </a>
+        <p>{{post.post}}</p>
+        </md-card-title-text>
+      </md-card-title>
+    </md-card>
   </div>
 </div>
 <div ng-include="'footer/index.tpl.html'"></div>
