--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -180,6 +180,7 @@
         <div class="col-md-6">
           <h1>be part of the movement</h1>
           <h4>direct your impact though input on policy</h4>
+          <!--reduce polarization-->
           <p>directly impact the creation of policy</p>
           <p>creating a coalition of representation</p>
           <a href="/about" class="btn btn-default">learn more</a>
