--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -59,41 +59,7 @@
           </div>
         </div>
 
-        <!--
-        <h3>my constituents</h3>
-        <md-divider></md-divider>
-        <md-card ng-repeat="constituent in constituents">
-          <md-card-title>
-            <md-card-title-text>
-              <h4><a href="/member/{{constituent.constituent.username}}">{{constituent.constituent.username}}</a></h4>
-            </md-card-title-text>
-          </md-card-title>
-        </md-card>
-        <br><br>
-
-        <h3>my representatives</h3>
-        <md-divider></md-divider>
-        <md-card ng-repeat="representative in representatives">
-          <md-card-title>
-            <md-card-title-text>
-              <h4><a href="/member/{{representative.representative.username}}">{{representative.representative.username}}</a></h4>
-            </md-card-title-text>
-          </md-card-title>
-        </md-card>
-        <br><br>
-
-        <h3>my votes</h3>
-        <md-divider></md-divider>
-        <md-card ng-repeat="vote in userVotes">
-          <md-card-title>
-            <md-card-title-text>
-              {{voteString}}<br><br>
-              <a href="/vote/{{id}}">{{title}}</a><br>
-              <a href="/bill/{{bill.id}}/{{bill.title}}">{{bill.title}}</a><br>
-            </md-card-title-text>
-          </md-card-title>
-        </md-card>
-        -->
+        <!--constituents, representatives, userVotes-->
       
         <div class="spacing-5"></div>
         <div class="profilePost">
@@ -151,7 +117,6 @@
           <button class="btn btn-default col-xs-10 col-xs-offset-1">more <i class="fa fa-caret-down"></i></button>
         </div>
         <div class="spacing-50"></div>
-
 
       </div>
     </div>
@@ -255,23 +220,6 @@
         <button ng-show="!gettingRepresentatives" ng-click="getLatLng()" class="btn btn-default">find representatives</button><br>
         <i ng-show="gettingRepresentatives" style="font-size:48px" class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
 
-        <!--
-        <div class='md-padding' layout="row" layout-align="center" layout-wrap>
-          <md-card flex="20" ng-repeat="user in officialRepresentatives">
-            <a href="/member/{{user.username}}">
-              <img ng-src="{{user.avatarUrl}}" class="md-card-image" alt="{{user.username}}">
-            </a>
-            <md-card-title>
-              <md-card-title-text>
-                <a href="/member/{{user.username}}">
-                  <span class="">{{user.username}}</span>
-                </a>
-              </md-card-title-text>
-            </md-card-title>
-          </md-card>
-        </div>
-        -->
-
         <div class="col-lg-4 col-sm-6" ng-repeat="user in officialRepresentatives">
           <div style="margin:10px; box-shadow: 2px 2px 10px #999;overflow:hidden">
             <div class="image" style="background-image: url('{{user.coverUrl}}')">
@@ -289,16 +237,6 @@
             </div>
           </div>
         </div>
-
-        <!--
-        <h3>message your reps</h3>
-        <i class="fa fa-envelope-o" aria-hidden="true"></i>
-        <i class="fa fa-print" aria-hidden="true"></i>
-        <i class="fa fa-files-o" aria-hidden="true"></i>
-        <md-input-container class="md-block">
-          <textarea ng-model="message" md-maxlength="150" rows="5" md-select-on-focus aria-label="new post"></textarea>
-        </md-input-container>
-        -->
 
         <div class="col-lg-4 col-sm-6" ng-repeat="user in users">
           <div style="margin:10px; box-shadow: 2px 2px 10px #999;overflow:hidden">
