--- a/assets/styles/css/theme.css
+++ b/assets/styles/css/theme.css
@@ -603,7 +603,8 @@ md-progress-linear.md-default-theme .md-bar, md-progress-linear .md-bar {
 }
 .log-background {
   z-index: 1;
-  background: url(../../images/internetProtest2.png) no-repeat center center fixed;
+  background: url(../../images/congress.jpg) no-repeat center center fixed;
+  //background: url(../../images/internetProtest2.png) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
