--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -13,7 +13,6 @@
         <link rel="stylesheet" href="/styles/css/bootstrap-social.css">
         <link rel="stylesheet" href="/styles/css/bootstrap.css">
         <link rel="stylesheet" href="/styles/css/committee.css">
-        <link rel="stylesheet" href="/styles/css/font-awesome.min.css">
         <link rel="stylesheet" href="/styles/css/home.css">
         <link rel="stylesheet" href="/styles/css/intro.css">
         <link rel="stylesheet" href="/styles/css/member.css">
@@ -48,7 +47,7 @@
     </head>
     <body>
 
-        <% body %>
+        <%- body %>
 
         <!--SCRIPTS-->
         <script src="/bower_components/jquery/dist/jquery.min.js"></script>
