--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -21,9 +21,10 @@
         <link rel="stylesheet" href="/bower_components/angular-google-places-autocomplete/src/autocomplete.css">
         <!--STYLES END-->
         
-        <!--EXTRA STYLES-->
+        <!--FONTS-->
         <link rel="stylesheet" href="/fonts/css/font-awesome.min.css">
-        <!--EXTRA STYLES END-->
+        <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Jura">
+        <!--FONTS END-->
 
         <!--Google Analytics-->
         <script>
