--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,9 +3,22 @@
     <head>
         <title>voetr</title>
         <base href="/">
-        <!-- Viewport mobile tag for sensible mobile support -->
+
+        <!--META TAGS-->
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <meta name="fragment" content="!">
+        <meta name="theme-color" content="#ffffff">
+        <meta name="apple-mobile-web-app-title" content="voetr">
+        <meta name="application-name" content="voetr">
+        <meta name="theme-color" content="#ffffff">
+        <!--META TAGS END-->
+
+        <!--FAVICONS-->
+        <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
+        <link rel="icon" type="image/png" href="/favicons/favicon-32x32.png" sizes="32x32">
+        <link rel="icon" type="image/png" href="/favicons/favicon-16x16.png" sizes="16x16">
+        <link rel="manifest" href="/favicons/manifest.json">
+        <link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#5bbad5">
+        <!--FAVICONS END-->
 
         <!--STYLES-->
         <link rel="stylesheet" href="/styles/css/about.css">
@@ -26,7 +39,7 @@
         <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Jura">
         <!--FONTS END-->
 
-        <!--Google Analytics-->
+        <!--ANALYTICS-->
         <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -35,7 +48,8 @@
           ga('create', 'UA-22491760-5', 'auto');
           ga('send', 'pageview');
         </script>
-        
+        <!--ANALYTICS END-->
+
     </head>
     <body>
 
