--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,6 +5,8 @@
         <base href="/">
 
         <!--META TAGS-->
+        <meta name="description" content="empowering the internet">
+        <meta name="keywords" content="politics, empower, build, coalition">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <meta name="theme-color" content="#ffffff">
         <meta name="apple-mobile-web-app-title" content="voetr">
