--- a/assets/src/app/login/index.tpl.html
+++ b/assets/src/app/login/index.tpl.html
@@ -56,7 +56,7 @@
             <button style="width:100%" class="btn btn-green" type="submit">Sign in</button> 
         </form>
         <div style="text-align:center">
-            <a class="" href="/register">Sign up for Voetr</a>
+            <a class="" href="/register">Sign up for voetr</a>
         </div>
         <br><md-divider></md-divider>
         <div style="text-align:center;padding:2em">
