--- a/assets/src/app/register/index.tpl.html
+++ b/assets/src/app/register/index.tpl.html
@@ -55,7 +55,7 @@
             <input name="email" placeholder="email" title="email" type="email"> 
             <input name="username" placeholder="username" title="username" type="text"> 
             <input name="password" placeholder="password" title="password" type="password"> 
-            <button style="width:100%" class="btn btn-green" type="submit">Sign up for Voetr</button>
+            <button style="width:100%" class="btn btn-green" type="submit">Sign up for voetr</button>
         </form>
         <div style="text-align:center">
             <a class="" href="/login">or Login</a>
