--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -20,6 +20,7 @@
         <link rel="icon" type="image/png" href="/favicons/favicon-16x16.png" sizes="16x16">
         <link rel="manifest" href="/favicons/manifest.json">
         <link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#5bbad5">
+        <link rel="shortcut icon" href="/favicons/favicon.ico">
         <!--FAVICONS END-->
 
         <!--STYLES-->
