--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,14 +5,17 @@
         <base href="/">
 
         <!--META TAGS-->
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <meta name="description" content="empowering the internet">
         <meta name="keywords" content="politics, empower, build, coalition">
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <meta name="theme-color" content="#ffffff">
         <meta name="apple-mobile-web-app-title" content="voetr">
         <meta name="application-name" content="voetr">
         <meta name="theme-color" content="#ffffff">
-        <!--META TAGS END-->
+        <meta name="superfish" content="nofish">
+        <meta name="robots" content="index, follow">
+        <meta name="revisit-after" content="1 Day">
+        <link rel="canonical" href="https://www.voetr.com" />
+        <!--META TAGS END-->        
 
         <!--FAVICONS-->
         <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
