--- a/assets/src/app/search/index.tpl.html
+++ b/assets/src/app/search/index.tpl.html
@@ -28,7 +28,7 @@
 	        <div class="col-lg-4 col-sm-6" ng-repeat="user in officialRepresentatives">
 	          <div style="margin:10px; box-shadow: 2px 2px 10px #999;overflow:hidden">
 	            <div class="image" style="background-image: url('{{user.coverUrl}}')">
-	              <img alt="" style="position:absolute;left:0;right0;margin:0 auto;margin-top:4em" src="{{user.avatarUrl}}" err-src="/images/avatar.png">
+	              <img alt="" style="position:absolute;left:0;right0;margin:0 auto;margin-top:4em" ng-src="{{user.avatarUrl}}" err-src="/images/avatar.png">
 	            </div>
 	            <div class="info">
 	              <h2 class="name"><a href="member/{{user.username}}">{{user.username}}</a></h2>
@@ -98,7 +98,7 @@
 				<div class="col-lg-4 col-sm-6">
 				  <div style="margin:10px; box-shadow: 2px 2px 10px #999;overflow:hidden">
 				    <div class="image" style="background-image: url('{{searchResult.coverUrl}}')">
-				      <img alt="" style="position:absolute;left:0;right0;margin:0 auto;margin-top:4em" src="{{searchResult.avatarUrl}}" err-src="/images/avatar.png">
+				      <img alt="" style="position:absolute;left:0;right0;margin:0 auto;margin-top:4em" ng-src="{{searchResult.avatarUrl}}" err-src="/images/avatar.png">
 				    </div>
 				    <div class="info">
 				      <h2 class="name"><a href="member/{{searchResult.username}}">{{searchResult.username}}</a></h2>
