--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -4,7 +4,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-4">
-        <img class="avatar" style="margin-top:0em" src="{{currentUser.avatarUrl}}"/>
+        <img class="avatar" style="margin-top:0em" ng-src="{{currentUser.avatarUrl}}"/>
         <h2><a href="/member/{{currentUser.username}}"><b>{{currentUser.username}}</a></b></h2>
         <div class="spacing-5"></div>
         <h5>Bills - {{committees.length}}</h5>
@@ -28,7 +28,7 @@
             <div class="spacing-10"></div>
             <div ngf-accept="'image/*'" ngf-drop ngf-select="uploadIdentification($file)" ng-model="file" class="drop-box" ngf-drag-over-class="dragover" ngf-allow-dir="true">
               <button class="btn btn-default"><i class="fa fa-upload"></i> Upload</button>
-              <img ng-show="user.identificationUrl" src="{{user.identificationUrl}}">
+              <img ng-show="user.identificationUrl" ng-src="{{user.identificationUrl}}">
             </div>
             <div class="spacing-25"></div>
             <h4><b>Official Address</b></h4>
@@ -223,7 +223,7 @@
         <div class="col-lg-4 col-sm-6" ng-repeat="user in officialRepresentatives">
           <div style="margin:10px; box-shadow: 2px 2px 10px #999;overflow:hidden">
             <div class="image" style="background-image: url('{{user.coverUrl}}')">
-              <img alt="" style="position:absolute;left:0;right0;margin:0 auto;margin-top:4em" src="{{user.avatarUrl}}" err-src="/images/avatar.png">
+              <img alt="" style="position:absolute;left:0;right0;margin:0 auto;margin-top:4em" ng-src="{{user.avatarUrl}}" err-src="/images/avatar.png">
             </div>
             <div class="info">
               <h2 class="name"><a href="member/{{user.username}}">{{user.username}}</a></h2>
@@ -241,7 +241,7 @@
         <div class="col-lg-4 col-sm-6" ng-repeat="user in users">
           <div style="margin:10px; box-shadow: 2px 2px 10px #999;overflow:hidden">
             <div class="image" style="background-image: url('{{user.coverUrl}}')">
-              <img alt="" style="position:absolute;left:0;right0;margin:0 auto;margin-top:4em" src="{{user.avatarUrl}}" err-src="/images/avatar.png">
+              <img alt="" style="position:absolute;left:0;right0;margin:0 auto;margin-top:4em" ng-src="{{user.avatarUrl}}" err-src="/images/avatar.png">
             </div>
             <div class="info">
               <h2 class="name"><a href="member/{{user.username}}">{{user.username}}</a></h2>
