--- a/.tmp/public/src/app/home/index.tpl.html
+++ b/.tmp/public/src/app/home/index.tpl.html
@@ -145,10 +145,13 @@
         <div class="col-md-6">
           <h1>be part of the movement</h1>
           <h4>direct your impact though input on policy</h4>
-          <!--reduce polarization-->
-          <p>directly impact the creation of policy</p>
-          <p>creating a coalition of representation</p>
+          <h4>create a coalition of representation</h4>
+          <br><br>
           <a href="/about" class="btn btn-default">learn more</a>
+          <!--reduce polarization-->
+          <!--seeing past partisan politics-->
+          <!--<p>directly impact the creation of policy</p>-->
+          <!--<p>creating a coalition of representation</p>-->
         </div>
         <!--<div class="col-md-12">
           <md-divider></md-divider>
@@ -191,7 +194,7 @@
           </md-card-title>
         </md-card> 
         <div ng-click="loadMoreBills()" style="text-align:center">
-          <button class="btn btn-default col-xs-10 col-xs-offset-1">more <i class="fa fa-caret-down"></i></button>
+          <button class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-caret-down"></i></button>
         </div>
       </div>
     </div>
@@ -208,7 +211,7 @@
           </md-card-title>
         </md-card>
         <div ng-click="loadMoreCommittees()" style="text-align:center">
-          <button class="btn btn-default col-xs-10 col-xs-offset-1">more <i class="fa fa-caret-down"></i></button>
+          <button class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-caret-down"></i></button>
         </div>
       </div>
     </div>
@@ -256,7 +259,7 @@
           </div>
         </div>
         <div ng-click="loadMoreMembers()" style="text-align:center">
-          <button class="btn btn-default col-xs-10 col-xs-offset-1">more <i class="fa fa-caret-down"></i></button>
+          <button class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-caret-down"></i></button>
         </div>
       </div>
     </div>
