--- a/.tmp/public/src/app/vote/index.tpl.html
+++ b/.tmp/public/src/app/vote/index.tpl.html
@@ -19,6 +19,25 @@
 			<uib-tab heading="Activity" active="active">
 		    </uib-tab>
 			<uib-tab heading="Discussion">
+				<div class="profilePost">
+		          <form role="form">
+		            <md-input-container class="md-block">
+		              <textarea ng-model="newPost.post" md-maxlength="150" rows="5" md-select-on-focus aria-label="new post"></textarea>
+		            </md-input-container>
+		            <button ng-click="createPost()" type="submit" class="btn btn-default">Submit</button>
+		          </form>
+		        </div>
+		        <md-card ng-repeat="post in posts">
+		          <md-card-title>
+		            <md-card-title-text>
+		            <a href="member/{{post.user.username}}">
+		              <img style="max-width:64px" ng-src="{{post.user.avatarUrl}}" class="md-card-image" alt="{{post.user.username}}">
+		              <p>{{post.user.username}}</p>
+		            </a>
+		            <p>{{post.post}}</p>
+		            </md-card-title-text>
+		          </md-card-title>
+		        </md-card>
 		    </uib-tab>
 			<uib-tab heading="{{vote.plusCount}}  Yes" active="active">
 			    <div class="col-lg-4 col-sm-6" ng-repeat="vote in yesVotes">
