--- a/assets/src/app/bills/index.tpl.html
+++ b/assets/src/app/bills/index.tpl.html
@@ -5,11 +5,23 @@
   </div>
 </div>
 <div class="container">
+  <div class="dropdown sort-dropdown noselect">
+      <a class="dropdown-toggle noselect" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+          <h4 class="noselect">Sort by {{sort}}<span class="caret"></span></h4>
+      </a>
+      <ul class="dropdown-menu">
+          <li><a class="sort-a" ng-click="selectSort('createdAt DESC')"><h5>Most Recent</h5></a></li>
+          <hr class="sort-hr">
+          <li><a class="sort-a" ng-click="selectSort('voteCount DESC')"><h5>Highest Rated</h5></a></li>
+          <hr class="sort-hr">
+          <li><a class="sort-a" ng-click="selectSort('voteCount ASC')"><h5>Lowest Rated</h5></a></li>
+      </ul>
+  </div>
 	<md-card ng-repeat="bill in bills">
       <md-card-title>
         <md-card-title-text>
           <h4>
-			{{bill.voteCount}}
+			     {{bill.voteCount}}
             <button ng-class="{'upVoted': vote.class=='upVote'}" class="btn btn-default upVote" ng-click="createVote(1, vote)"><i class="fa fa-caret-up"></i>  {{vote.plusCount}}</button>
             <button ng-class="{'downVoted': vote.class=='downVote'}" class="btn btn-default downVote" ng-click="createVote(-1, vote)"><i class="fa fa-caret-down"></i>  {{vote.minusCount}}</button>
             <a href="/bill/{{bill.id}}/{{bill.title.replace(' ','-')}}">{{bill.title}}</a>
