--- a/assets/src/app/nav/index.tpl.html
+++ b/assets/src/app/nav/index.tpl.html
@@ -1,5 +1,7 @@
 <style>
-.navbar-inverse{background-color:rgba(36,36,46,1);}
+//.navbar-inverse{background-color:rgba(36,36,46,1);}
+.navbar-inverse{background-color:rgba(255,255,255,1);}
+.navbar-inverse .navbar-nav>li>a, .navbar-inverse .navbar-text{color:#424242}
 </style>
 <div ng-controller="NavCtrl" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
   <div class="container">
@@ -23,7 +25,6 @@
         </form>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <!--<li ng-show="currentUser"><a href="/account">{{currentUser.username}}</a></li>-->
         <li class="dropdown" ng-show="currentUser">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             {{currentUser.username}} <span class="caret"></span>
@@ -40,7 +41,6 @@
             <li><a href="/logout">log out</a></li>
           </ul>
         </li>
-        <!--<li ng-show="currentUser"><a class="" href="#">+ message</a></li>-->
         <li ng-show="!currentUser"><a href="/register">register</a></li>
         <li ng-show="!currentUser"><a href="/login">login</a></li>
       </ul>
