--- a/assets/src/app/search/index.tpl.html
+++ b/assets/src/app/search/index.tpl.html
@@ -65,7 +65,7 @@
 			        </md-card>
 			    </div>
 		        <div ng-click="loadMoreBills()" style="text-align:center">
-		          <button class="btn btn-default col-xs-10 col-xs-offset-1">more</button>
+		          <button class="btn btn-default col-xs-10 col-xs-offset-1">MORE</button>
 		        </div>
 		    </div>
 		    <div style="height:100px;"></div>
