--- a/assets/src/app/votes/index.tpl.html
+++ b/assets/src/app/votes/index.tpl.html
@@ -5,6 +5,18 @@
   </div>
 </div>
 <md-list class="container">
+	<div class="dropdown sort-dropdown noselect">
+		<a class="dropdown-toggle noselect" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+			<h4 class="noselect">Sort by {{sort}}<span class="caret"></span></h4>
+		</a>
+		<ul class="dropdown-menu">
+			<li><a class="sort-a" ng-click="selectSort('createdAt DESC')"><h5>Most Recent</h5></a></li>
+			<hr class="sort-hr">
+			<li><a class="sort-a" ng-click="selectSort('voteCount DESC')"><h5>Most Votes</h5></a></li>
+			<hr class="sort-hr">
+			<li><a class="sort-a" ng-click="selectSort('voteCount ASC')"><h5>Lowest Votes</h5></a></li>
+		</ul>
+	</div>
 	<md-list-item ng-repeat="vote in votes">
 		<div class="md-list-item-text" layout="column">
 			<h3 class="" style="font-size:25px">
