--- a/assets/src/app/bill/index.tpl.html
+++ b/assets/src/app/bill/index.tpl.html
@@ -17,7 +17,7 @@
 					<div class="col-lg-4 col-sm-6">
 			          <div style="margin:10px; box-shadow: 2px 2px 10px #999;">
 			            <div class="image" style="background-image: url('{{bill.user.coverUrl}}')">
-	              		  <img alt="" style="position:absolute;left:0;right0;margin:0 auto;margin-top:4em;max-width:20em" src="{{bill.user.avatarUrl}}" err-src="/images/avatar.png">
+	              		  <img alt="" style="position:absolute;left:0;right0;margin:0 auto;margin-top:4em;max-width:20em" ng-src="{{bill.user.avatarUrl}}" err-src="/images/avatar.png">
 			            </div>
 			            <div class="info">
 			              <h2 class="name"><a href="member/{{bill.user.username}}">{{bill.user.username}}</a></h2>
@@ -62,7 +62,7 @@
 			            <md-card-title>
 			            	<md-card-title-text>
 								<a href="/member/{{comment.user.username}}">
-									<img style="max-width:64px;" src="{{comment.user.avatarUrl}}" class="md-card-image" alt="{{comment.user.username}}">
+									<img style="max-width:64px;" ng-src="{{comment.user.avatarUrl}}" class="md-card-image" alt="{{comment.user.username}}">
 									<p>{{comment.user.username}}</p>
 								</a>
 								<p>{{comment.comment}}</p>
