thinkin bout votes

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -97,6 +97,7 @@
         <script src="/src/app/vote/index.js"></script>
         <script src="/src/app/votes/index.js"></script>
         <script src="/src/common/models/bill.js"></script>
+        <script src="/src/common/models/billVote.js"></script>
         <script src="/src/common/models/comment.js"></script>
         <script src="/src/common/models/committee.js"></script>
         <script src="/src/common/models/committeeMember.js"></script>
@@ -107,6 +108,7 @@
         <script src="/src/common/models/search.js"></script>
         <script src="/src/common/models/user.js"></script>
         <script src="/src/common/models/vote.js"></script>
+        <script src="/src/common/models/voteVote copy.js"></script>
         <script src="/src/common/models/voteVote.js"></script>
         <script src="/src/common/services/config.js"></script>
         <script src="/src/common/services/index.js"></script>
