--- a/.tmp/public/src/app/search/index.tpl.html
+++ b/.tmp/public/src/app/search/index.tpl.html
@@ -8,7 +8,6 @@
 		</div>
 		<br>
 		<div class="container">
-	        <button ng-show="!gettingRepresentatives" ng-click="getLatLng()" class="btn btn-default">find representatives</button><br><br>
 	        <md-card>
 				<md-card-title>
 					<input style="width:100%" ng-keyup="keyPress(searchValue)" ng-model="searchValue">
@@ -18,12 +17,12 @@
 	            <md-card ng-repeat="searchResult in searchResults">
 	              <md-card-title>
 	                <md-card-title-text>
-						<a href="/project/{{searchResult.urlTitle}}">{{searchResult.title}}</a>
+						<a href="{{searchResult.urlTitle}}">{{searchResult}}</a>
 					</md-card-title-text>
 	              </md-card-title>
 	            </md-card>
 	        </div>
-
+	        <button ng-show="!gettingRepresentatives" ng-click="getLatLng()" class="btn btn-default">find representatives</button><br><br>
 	        <i ng-show="gettingRepresentatives" style="font-size:48px" class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
 	        <div class="col-lg-4 col-sm-6" ng-repeat="user in officialRepresentatives">
 	          <div style="margin:10px; box-shadow: 2px 2px 10px #999;overflow:hidden">
@@ -43,33 +42,39 @@
 	          </div>
 	        </div>
 
-			<!--search with member filter-->
-			<h3>trending</h3>
-			<h3>bills</h3>
-			<h3>committees</h3>
-			<h3>members</h3>
-			<h3>votes</h3>
+			<div class="container">
+	 			<uib-tabset>
+	 			    <uib-tab heading="Trending" active="active">
+	    			</uib-tab>
+					<uib-tab heading="Bills">
+	    			</uib-tab>
+					<uib-tab heading="Committees">
+	    			</uib-tab>
+					<uib-tab heading="Members">
+	    			</uib-tab>
+	    			<uib-tab heading="Votes">
+	    			</uib-tab>
+				</uib-tabset>
+			</div>
 
-		    <div id="bills">
-			    <div class='md-padding'>
-			    	<md-card ng-repeat="bill in bills">
-			        	<md-card-title>
-			            	<md-card-title-text>
-				            	<h4>
-					                <button ng-class="{'upVoted': vote.class=='upVote'}" class="btn btn-default upVote" ng-click="createVote(1, vote)"><i class="fa fa-caret-up"></i>  {{vote.plusCount}}</button>
-					                <button ng-class="{'downVoted': vote.class=='downVote'}" class="btn btn-default downVote" ng-click="createVote(-1, vote)"><i class="fa fa-caret-down"></i>  {{vote.minusCount}}</button>
-					                <a href="/bill/{{bill._id}}/{{bill.title.replace(' ','-')}}">{{bill.title}}</a>
-				            	</h4>
-			            	</md-card-title-text>
-			            </md-card-title>
-			        </md-card>
-			    </div>
-		        <div ng-click="loadMoreBills()" style="text-align:center">
-		          <button class="btn btn-default col-xs-10 col-xs-offset-1">MORE</button>
-		        </div>
+		    <div class='md-padding'>
+		    	<md-card ng-repeat="bill in bills">
+		        	<md-card-title>
+		            	<md-card-title-text>
+			            	<h4>
+				                <button ng-class="{'upVoted': vote.class=='upVote'}" class="btn btn-default upVote" ng-click="createVote(1, vote)"><i class="fa fa-caret-up"></i>  {{vote.plusCount}}</button>
+				                <button ng-class="{'downVoted': vote.class=='downVote'}" class="btn btn-default downVote" ng-click="createVote(-1, vote)"><i class="fa fa-caret-down"></i>  {{vote.minusCount}}</button>
+				                <a href="/bill/{{bill._id}}/{{bill.title.replace(' ','-')}}">{{bill.title}}</a>
+			            	</h4>
+		            	</md-card-title-text>
+		            </md-card-title>
+		        </md-card>
 		    </div>
-		    <div style="height:100px;"></div>
-		</div>
+	        <div ng-click="loadMoreBills()" style="text-align:center">
+	          <button class="btn btn-default col-xs-10 col-xs-offset-1">MORE</button>
+	        </div>
+	    </div>
+	    <div style="height:50px;"></div>
 	</div>
 	<div ng-show="searchQuery">
 		<div class="imageContainerSmall">
