--- a/.tmp/public/src/app/account/index.tpl.html
+++ b/.tmp/public/src/app/account/index.tpl.html
@@ -1,9 +1,6 @@
 <!--we need some hover css here... we have on click editing-->
 <div style="height:25em;width: 100%;overflow: hidden;" ngf-accept="'image/*'" ngf-drop ngf-select="uploadCover($file)" ng-model="file" class="drop-box" ngf-drag-over-class="dragover" ngf-allow-dir="true" href="#">
-	<i ng-show="avatarLoading" style="font-size:48px" class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
 	<img style="width:100%;min-height:35em;" src="{{user.coverUrl}}">
-	<i ng-show="coverLoading" style="font-size:48px" class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
-
 </div>
 <div class="container">
 	<!--we need some hover css here... we have on click editing-->
@@ -30,10 +27,10 @@
 				<label class="modal-label">Last Name</label>
 				<input ng-model="user.lastName" required name="lastName" type="text">
 			</md-input-container>
-			<!--<md-input-container>
+			<md-input-container>
 				<label class="modal-label">Address</label>
 				<input ng-model="user.address" required name="Address" type="text">
-			</md-input-container>-->
+			</md-input-container>
 		</div>
 		<button type="submit" class="btn btn-primary">Save</button>
 	</form>
@@ -76,6 +73,7 @@
 	<md-input-container class="md-block">
 		<label class="modal-label">Address</label>
 		<input ng-model="user.address" required name="address" type="text">
+		<button type="submit" class="btn btn-primary">Save</button>
 	</md-input-container>
 	<!--<p>ssn</p>-->
 
