--- a/.tmp/public/src/app/member/index.tpl.html
+++ b/.tmp/public/src/app/member/index.tpl.html
@@ -22,9 +22,9 @@
 				<h5 ng-show="member.title"><span style="color:grey">{{member.title}}</span></h5>
 				<h5 ng-show="member.district"><span style="color:grey">District {{member.district}}</span></h5>
 				<h5 ng-show="member.state"><span style="color:grey">{{member.state}}</span></h5>
-				<a ng-show="member.socialAccounts.facebook.profileUrl" href="{{member.socialAccounts.facebook.profileUrl}}"  target="_blank"><span class="fa fa-facebook"></span> facebook</a>
-				<a ng-show="member.socialAccounts.twitter.profileUrl" href="{{member.socialAccounts.twitter.profileUrl}}"  target="_blank"><span class="fa fa-twitter"></span> twitter</a>
-				<a ng-show="member.socialAccounts.google.profileUrl" href="{{member.socialAccounts.google.profileUrl}}"  target="_blank"><span class="fa fa-google"></span> google</a>
+				<a ng-show="member.socialAccounts.facebook.profileUrl" href="{{member.socialAccounts.facebook.profileUrl}}"  target="_blank"><span class="fa fa-facebook"></span> Facebook</a>
+				<a ng-show="member.socialAccounts.google.profileUrl" href="{{member.socialAccounts.google.profileUrl}}"  target="_blank"><span class="fa fa-google"></span> Google</a>
+				<a ng-show="member.socialAccounts.twitter.profileUrl" href="{{member.socialAccounts.twitter.profileUrl}}"  target="_blank"><span class="fa fa-twitter"></span> Twitter</a>
 				<div class="spacing-10"></div>
 			</div>
 			<div class="pull-right">
@@ -50,9 +50,9 @@
 				<form role="form">
 					<md-input-container class="md-block">
 			        	<textarea ng-model="newPost.post" rows="5" md-select-on-focus aria-label="new post"></textarea>
-						<div class="spacing-10"></div>
 						<!--connect legislators-->
-						<p>send as a fax? -- send as mail (verified), send email (always) -- send video??</p>
+						<!--<p>send as a fax? - send as mail (verified), send email (always) - send video??</p>-->
+						<div class="spacing-10"></div>
 						<button ng-click="createPost()" type="submit" class="btn btn-default">Submit</button>
 					</md-input-container>
 				</form>
@@ -64,7 +64,7 @@
 					<md-card-title-text>
 					<a href="member/{{post.user.username}}">
 						<img style="max-width:64px" ng-src="{{post.user.avatarUrl}}" class="md-card-image" alt="{{post.user.username}}">
-						<p>{{post.user.username}}</p>
+						<h4>{{post.user.username}}</h4>
 					</a>
 					<p>{{post.post}}</p>
 					</md-card-title-text>
@@ -85,11 +85,19 @@
 
 
 			<md-card ng-repeat="vote in votes">
-				<a href="member/{{vote.user.username}}">
-					<img style="max-width:64px" ng-src="{{vote.user.avatarUrl}}" class="md-card-image" alt="{{vote.user.username}}">
-					<p>{{vote.user.username}}</p>
-				</a>
-				{{vote.voteString}} on behalf of {{constituents.length}}
+				<md-card-title>
+					<a href="member/{{vote.user.username}}">
+						<img style="max-width:64px" ng-src="{{vote.user.avatarUrl}}" class="md-card-image" alt="{{vote.user.username}}">
+						<h4>{{vote.user.username}}</h4>
+					</a>
+					<p>{{vote.voteString}} on behalf of {{constituents.length}} constitutent<span ng-show="constituents.length > 1">s</span></p>
+				</md-card-title>
+				<md-card-title>
+					<div style="float:right">
+						<a href="/vote/{{vote.vote.id}}">{{vote.vote.title}}</a> for 
+						<a href="/bill/{{vote.bill.id}}/{{vote.bill.title}}">{{vote.bill.title}}</a>
+					</div>
+				</md-card-title>
 			</md-card>
 
 
