--- a/assets/src/app/bill/index.tpl.html
+++ b/assets/src/app/bill/index.tpl.html
@@ -5,89 +5,89 @@
 		<div ng-repeat="committee in bill.committees">
 			<p><a href="committee/{{committee.urlTitle}}">{{committee.title}}</a></p>
 		</div>
-		<md-divider></md-divider>
+		<div class="spacing-10"></div>
 		<div class="row">
 			<button class="col-xs-6 btn btn-default" ng-click="createVote(1)"><i class="fa fa-caret-up"></i> {{vote.plusCount}}</button>
         	<button class="col-xs-6 btn btn-default" ng-click="createVote(-1)"><i class="fa fa-caret-down"></i> {{vote.minusCount}}</button>
     	</div>
+    	<div class="spacing-10"></div>
 		<uib-tabset>
 			<uib-tab heading="Info" active="active">
-				<br>
-				<div class="container">
-					<div class="col-lg-4 col-sm-6">
-			          <div style="margin:10px; box-shadow: 2px 2px 10px #999;">
-			            <div class="image" style="background-image: url('{{bill.user.coverUrl}}')">
-	              		  <img alt="" style="position:absolute;left:0;right0;margin:0 auto;margin-top:4em;max-width:20em" ng-src="{{bill.user.avatarUrl}}" err-src="/images/avatar.png">
-			            </div>
-			            <div class="info">
-			              <h2 class="name"><a href="member/{{bill.user.username}}">{{bill.user.username}}</a></h2>
-			              <p>{{bill.user.title}}</p>
-			              <!--<button class="btn btn-default">follow</button>-->
-			            </div>
-			            <div class="social">
-			              <a ng-show="bill.user.socialAccounts.facebook.profileUrl" href="{{bill.user.socialAccounts.facebook.profileUrl}}"  target="_blank"><i class="fa fa-facebook"></i></a>
-			              <a ng-show="bill.user.socialAccounts.twitter.profileUrl" href="{{bill.user.socialAccounts.twitter.profileUrl}}"  target="_blank"><i class="fa fa-twitter"></i></a>
-			              <a ng-show="bill.user.socialAccounts.google.profileUrl" href="{{bill.user.socialAccounts.google.profileUrl}}"  target="_blank"><i class="fa fa-google"></i></a>
-			            </div>
-			          </div>
-			        </div>
-					<div class="col-sm-8">
-						<br>
-						<p>{{bill.billContent.current_status_description}}</p>
-						<p>{{bill.billContent.current_status_label}}</p>
-						<div ng-show="bill.summary"><p>Bill Summary</p><p>{{bill.summary}}</p></div>
-						<div ng-bind-html="billContent"></div>
+				<div class="col-lg-4 col-sm-6">
+					<div style="margin:10px; box-shadow: 2px 2px 10px #999;">
+						<div class="image" style="background-image: url('{{bill.user.coverUrl}}')">
+							<img alt="" style="position:absolute;left:0;right0;margin:0 auto;margin-top:4em;max-width:20em" ng-src="{{bill.user.avatarUrl}}" err-src="/images/avatar.png">
+						</div>
+						<div class="info">
+						    <h2 class="name"><a href="member/{{bill.user.username}}">{{bill.user.username}}</a></h2>
+						    <p>{{bill.user.title}}</p>
+							<p>{{bill.user.state}}</p>
+							<!--<button class="btn btn-default">follow</button>-->
+						</div>
+						<div class="social">
+							<a ng-show="bill.user.socialAccounts.facebook.profileUrl" href="{{bill.user.socialAccounts.facebook.profileUrl}}"  target="_blank"><i class="fa fa-facebook"></i></a>
+							<a ng-show="bill.user.socialAccounts.twitter.profileUrl" href="{{bill.user.socialAccounts.twitter.profileUrl}}"  target="_blank"><i class="fa fa-twitter"></i></a>
+							<a ng-show="bill.user.socialAccounts.google.profileUrl" href="{{bill.user.socialAccounts.google.profileUrl}}"  target="_blank"><i class="fa fa-google"></i></a>
+						</div>
 					</div>
+				</div>
+				<div class="col-sm-8">
+					<br>
+					<p>{{bill.billContent.current_status_description}}</p>
+					<p>{{bill.billContent.current_status_label}}</p>
+					<div ng-show="bill.summary">
+						<h4>Summary</h4>
+						<p style="color:rgb(100,100,100)">{{bill.summary}}</p>
+					</div>
+					<div ng-bind-html="billContent"></div>
 				</div>
 		    </uib-tab>
 		    <uib-tab heading="Activity">
 		    	{{actions}}
 		    </uib-tab>
 			<uib-tab heading="Discussion">
-			
 				<div class="profilePost">
-		          <form role="form">
-		            <md-input-container class="md-block">
-		              <textarea ng-model="newPost.post" md-maxlength="150" rows="5" md-select-on-focus aria-label="new post"></textarea>
-		            </md-input-container>
-		            <button ng-click="createPost()" type="submit" class="btn btn-default">Submit</button>
-		          </form>
+					<form role="form">
+						<md-input-container class="md-block">
+							<textarea ng-model="newPost.post" md-maxlength="150" rows="5" md-select-on-focus aria-label="new post"></textarea>
+							<button ng-click="createPost()" type="submit" class="btn btn-default">Submit</button>
+						</md-input-container>
+					</form>
 		        </div>
 		        <md-card ng-repeat="post in posts">
 		          <md-card-title>
 		            <md-card-title-text>
-		            <a href="member/{{post.user.username}}">
-		              <img style="max-width:64px" ng-src="{{post.user.avatarUrl}}" class="md-card-image" alt="{{post.user.username}}">
-		              <p>{{post.user.username}}</p>
-		            </a>
-		            <p>{{post.post}}</p>
+			            <a href="member/{{post.user.username}}">
+			              <img style="max-width:64px" ng-src="{{post.user.avatarUrl}}" class="md-card-image" alt="{{post.user.username}}">
+			              <h4>{{post.user.username}}</h4>
+			            </a>
+			            <p>{{post.post}}</p>
 		            </md-card-title-text>
 		          </md-card-title>
 		        </md-card>
-
 		    </uib-tab>
 		    <uib-tab heading="Votes">
 	    		<div ng-show="currentUser">
-					<form class="blog-input" role="form" ng-submit="">
-						<div class="form-group">
-							<input type="text" placeholder="newVote" ng-model="newComment.comment" class="form-control" id="postTitle">
-						</div>
-						<button type="submit" class="btn btn-primary">Submit</button>
+					<form role="form">
+						<md-input-container class="md-block">
+							<textarea ng-model="newVote.title" md-maxlength="150" rows="5" md-select-on-focus aria-label="newVote"></textarea>
+							<button type="submit" ng-click="" class="btn btn-default">Submit</button>
+						</md-input-container>
 					</form>
 				</div>
 			    <div class="voteContainer" ng-show="votes.length!=0">
-					<div ng-repeat="vote in bill.votes">
-						<h4>
-			      			<button class="btn btn-default" ng-click="createVote(1, vote)"><i class="fa fa-caret-up"></i> {{vote.plusCount}}</button>
-			      			<button class="btn btn-default" ng-click="createVote(-1, vote)"><i class="fa fa-caret-down"></i> {{vote.minusCount}}</button>
-							<button class="btn btn-default" ng-click="createVote(0, vote)"><i class="fa fa-question"></i> {{vote.otherCount}}</button>
-			      			({{vote.voteCount}})
-							<a href="/vote/{{vote.id}}">{{vote.title}}</a> -- {{vote.result}}
-						</h4>
-						<p>comment</p>
-						<!--<p>{{vote.type}}</p>-->
-						<md-divider></md-divider>
-					</div>
+					<md-card ng-repeat="vote in bill.votes">
+						<md-card-title>
+							<h4>
+				      			<button class="btn btn-default" ng-click="createVote(1, vote)"><i class="fa fa-caret-up"></i> {{vote.plusCount}}</button>
+				      			<button class="btn btn-default" ng-click="createVote(-1, vote)"><i class="fa fa-caret-down"></i> {{vote.minusCount}}</button>
+								<button class="btn btn-default" ng-click="createVote(0, vote)"><i class="fa fa-question"></i> {{vote.otherCount}}</button>
+				      			({{vote.voteCount}})
+								<a href="/vote/{{vote.id}}">{{vote.result}}: {{vote.title}}</a>
+							</h4>
+							<!--<p>comment</p>-->
+						</md-card-title>
+					</md-card>
 				</div>
 		    </uib-tab>
 			<uib-tab heading="Related">
@@ -96,7 +96,7 @@
 				</div>
 		    </uib-tab>
 		</uib-tabset>
-		<div style="height:100px;"></div>
+		<div class="spacing-100"></div>
 	</div>
 	<div ng-include="'footer/index.tpl.html'"></div>
 </div>
